stringset modified